style: fix horizontal overflow

--- a/front-end-challenge/src/features/home/components/MailingList.module.css
+++ b/front-end-challenge/src/features/home/components/MailingList.module.css
@@ -1,16 +1,14 @@
 .background {
     z-index: -1;
-    height: 50vh;
-    width: 100vw;
+    height: fit-content;
+    width: 100%;
     background: url("public/mailinglist.png") no-repeat top center;
     background-size: cover;
 }
 
 .overlay {
     background: rgba(37, 55, 149, 0.82);
-    width: 100vw;
-    height: 50vh;
+    height: 100%;
     overflow: hidden;
-    position: absolute;
     z-index: 2;
 }
