--- a/front-end-challenge/src/features/home/components/hero.module.css
+++ b/front-end-challenge/src/features/home/components/hero.module.css
@@ -1,16 +1,14 @@
 .hero {
     z-index: -1;
-    height: 100vh;
-    width: 100vw;
+    height: 80vh;
+    width: 100%;
     background: url("public/hero.png") no-repeat top center;
     background-size: cover;
 }
 
 .overlay {
     background: rgba(37, 55, 149, 0.82);
-    width: 100vw;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
-    position: absolute;
     z-index: 2;
 }
